--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.8",
     "better-auth": "^1.4.10",
+    "embla-carousel-react": "^8.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.0",
@@ -24,6 +25,8 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.4.0"
+    "@astrojs/check": "^0.9.6",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
